--- a/passes/basic_utilities/CMakeLists.txt
+++ b/passes/basic_utilities/CMakeLists.txt
@@ -25,8 +25,5 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 include(AddLLVM)
 
-# Pass
-add_subdirectory(src)
-
 # Install
-install(PROGRAMS include/Techniques.hpp include/EnvBuilder.hpp include/LoopSummary.hpp include/LoopInfoSummary.hpp include/LoopEnvironment.hpp include/LoopDependenceInfo.hpp include/Parallelization.hpp include/SCCDAGAttrs.hpp include/SCCDAGPartition.hpp include/Queue.hpp DESTINATION include)
+install(PROGRAMS include/SystemHeaders.hpp DESTINATION include)
