--- a/passes/pdg/src/CMakeLists.txt
+++ b/passes/pdg/src/CMakeLists.txt
@@ -25,7 +25,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../parallelization_utilities/include ../../alloc_aa/include ../../talkdown/include ../include )
+include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../parallelization_utilities/include ../../alloc_aa/include ../../talkdown/include ../include )
 
 # Declare the LLVM pass to compile
 add_llvm_loadable_module(${PassName} ${Srcs})
