--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -23,9 +23,7 @@ OPTIMIZED=parallelized
 TRANSFORMATIONS_BEFORE_PARALLELIZATION=$(AA_BASE) -mem2reg -simplifycfg -instcombine -tailcallelim -loop-simplify -lcssa -loop-unswitch -instcombine -loop-simplify -lcssa -indvars -loop-deletion -instcombine -indvars
 PDGPASS=-load ~/CAT/lib/AllocAA.so -load ~/CAT/lib/TalkDown.so -load ~/CAT/lib/PDGAnalysis.so
 PRINTPASSES=$(PDGPASS) -load ~/CAT/lib/PDGPrinter.so
-PARALLELIZATION_TECHNIQUES= -load ~/CAT/lib/DSWP.so -load ~/CAT/lib/DOALL.so -load ~/CAT/lib/HELIX.so
 PRE_OPTPASSES=-load ~/CAT/lib/Architecture.so $(PDGPASS) -load ~/CAT/lib/HotProfiler.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/DGSimplify.so
-OPTPASSES=$(PDGPASS) -load ~/CAT/lib/Architecture.so -load ~/CAT/lib/DataFlow.so -load ~/CAT/lib/HotProfiler.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/Heuristics.so -load ~/CAT/lib/ParallelizationTechnique.so $(PARALLELIZATION_TECHNIQUES) -load ~/CAT/lib/Parallelizer.so 
 PRINT_OUTPUT_FILE=test.txt
 
 # Fetch the list of files to compile
@@ -63,7 +61,7 @@ test_pdgdot.bc: test_seq.bc
 	$(OPT) $(PRINTPASSES) $(ANALYSES) -heuristics -PDGPrinter $^ -o $@
 
 test_dswp_unoptimized.bc: test_seq.bc output.prof
-	$(OPT) $(OPTPASSES) $(ANALYSES) -pgo-test-profile-file=output.prof -block-freq -pgo-instr-use -HotProfiler -heuristics -parallelizer $(PARALLELIZATION_OPTIONS) $< -o $@
+	noelle $(PARALLELIZATION_OPTIONS) $< -o $@
 	llvm-dis $@
 
 test_dswp.bc: test_dswp_unoptimized.bc
@@ -96,10 +94,10 @@ input.txt:
 	@../../scripts/create_input.sh $@
 
 show_passes: test_seq.bc
-	$(OPT) $(OPTPASSES) $(ANALYSES) -heuristics -Parallelizer $(PARALLELIZATION_OPTIONS) $^ --debug-pass=Structure -disable-output
+	noelle $(PARALLELIZATION_OPTIONS) $^ --debug-pass=Structure -disable-output
 
 show_time: test_seq.bc
-	$(OPT) $(OPTPASSES) $(ANALYSES) -heuristics -Parallelizer $(PARALLELIZATION_OPTIONS) $^ -time-passes -disable-output
+	noelle $(PARALLELIZATION_OPTIONS) $^ -time-passes -disable-output
 
 print_transformations_before_parallelization:
 	../../scripts/print.sh "$(PRINT_OUTPUT_FILE)" "$(TRANSFORMATIONS_BEFORE_PARALLELIZATION)" 
