Tests: Introduce template for unit testing and DGBase unit test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,16 +1,22 @@
 RUNTIME_DIRNAME="threadpool"
 RUNTIME_GITREPO="git@github.com:scampanoni/virgil.git"
 
-all: regression performance
+all: regression performance buildunit rununit
 
 condor: download
 	cd condor ; make ; make submit ;
-	 
+
 regression: download
 	./scripts/test_regression.sh ;
 
 performance: download
 	./scripts/test_performance.sh ;
+
+buildunit:
+	cd unit ; for i in `ls`; do ../scripts/build_unit.sh $$i ; done ; cd ../ ;
+
+rununit:
+	cd unit ; for i in `ls`; do ../scripts/run_unit.sh $$i ; done ; cd ../ ;
 
 download:
 	mkdir -p include ; cd include ; ../scripts/download.sh "$(RUNTIME_GITREPO)" "$(RUNTIME_DIRNAME)" ;
