Fixed the linking of unit tests. Added a clean pass for unit tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -26,3 +26,5 @@ clean:
 	./scripts/clean.sh ; rm -rf include/ ; rm -f regression/*.txt ;
 	rm -rf regression_* ;
 	cd condor ; make clean ; 
+
+.PHONY: condor regression performance buildunit rununit download clean 
