Ported to LLVM 9

--- a/src/alloc_aa/src/CMakeLists.txt
+++ b/src/alloc_aa/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Sources
-set(PassSrc 
+set(Srcs 
   AllocAA.cpp
   MemorySite.cpp
 )
 
 # Compilation flags
-set_source_files_properties(${PassSrc} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
+set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
 set(PassName "AllocAA")
@@ -25,4 +25,4 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} ../../parallelization_utilities/include ../include)
 
 # Declare the LLVM pass to compile
-add_llvm_loadable_module(${PassName} ${PassSrc})
+add_llvm_library(${PassName} MODULE ${Srcs})
