--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -30,4 +30,4 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../architecture/include ../../alloc_aa/include ../../pdg/include ../../hotprofiler/include ../include)
 
 # Declare the LLVM pass to compile
-add_llvm_loadable_module(${PassName} ${Srcs})
+add_llvm_library(${PassName} MODULE ${Srcs})
