--- a/src/dataflow/src/CMakeLists.txt
+++ b/src/dataflow/src/CMakeLists.txt
@@ -25,4 +25,4 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../parallelization_utilities/include ../include ./)
 
 # Declare the LLVM pass to compile
-add_llvm_loadable_module(${PassName} ${Srcs})
+add_llvm_library(${PassName} MODULE ${Srcs})
