--- a/src/talkdown/src/CMakeLists.txt
+++ b/src/talkdown/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Sources
-set(PassSrc 
+set(Srcs 
   TalkDown.cpp
 )
 
 # Compilation flags
-set_source_files_properties(${PassSrc} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
+set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
 set(PassName "TalkDown")
@@ -24,4 +24,4 @@ message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../parallelization_utilities/include ../include)
 
 # Declare the LLVM pass to compile
-add_llvm_loadable_module(${PassName} ${PassSrc})
+add_llvm_library(${PassName} MODULE ${Srcs})
