Added the ability to patch SVF

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,14 +1,18 @@
 all: compile
 
-compile: svf
-	cd svf ;
+compile: svf patch.tar
+	cd svf ; tar xf ../patch.tar ;
 
 svf:
 	git clone https://github.com/SVF-tools/SVF.git svf
 	./scripts/patch.sh
 
+patch.tar: patch svf
+	cd $< ; tar cf $@ * ; mv $@ ../ ;
+
 clean:
 	./scripts/clean.sh
+	rm -f patch.tar 
 
 uninstall:
 	rm -rf svf ;
