--- a/src/helix/src/CMakeLists.txt
+++ b/src/helix/src/CMakeLists.txt
@@ -29,7 +29,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../dataflow/include ../../alloc_aa/include ../../pdg/include ../../threadpool/include ../../parallelization_utilities/include ../../architecture/include  ../../heuristics/include ../../parallelization_technique/include ../../doall/include ../../hotprofiler/include ../include ./)
+include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../dataflow/include ../../alloc_aa/include ../../pdg/include ../../threadpool/include ../../parallelization_utilities/include ../../architecture/include  ../../heuristics/include ../../parallelization_technique/include ../../doall/include ../../hotprofiler/include ../include ./ ../../../external/svf/include)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
