--- a/src/loop_distribution/src/CMakeLists.txt
+++ b/src/loop_distribution/src/CMakeLists.txt
@@ -22,7 +22,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../alloc_aa/include ../../pdg/include ../../parallelization_utilities/include ../../hotprofiler/include ../include/ ./)
+include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../alloc_aa/include ../../pdg/include ../../parallelization_utilities/include ../../hotprofiler/include ../include/ ./ ../../../external/svf/include)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
