Renamed LoopsInfoSummary into LoopsSummary

--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Sources
 set(Srcs 
   LoopSummary.cpp
-  LoopsInfoSummary.cpp
+  LoopsSummary.cpp
   EnvBuilder.cpp
   LoopEnvironment.cpp
   SCCDAGAttrs.cpp
