Extracted SCCAttrs from SCCDAGAttrs

--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(Srcs
   EnvBuilder.cpp
   LoopEnvironment.cpp
   SCCDAGAttrs.cpp
+  SCCAttrs.cpp
   LoopDependenceInfo.cpp
   SCCDAGPartition.cpp
   Parallelization.cpp
