Another step towards improving the SCCDAGAttrs interface as well as the SCCAttrs one

--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -4,8 +4,9 @@ set(Srcs
   LoopsSummary.cpp
   EnvBuilder.cpp
   LoopEnvironment.cpp
-  SCCDAGAttrs.cpp
+  AccumulatorOpInfo.cpp
   SCCAttrs.cpp
+  SCCDAGAttrs.cpp
   LoopDependenceInfo.cpp
   SCCDAGPartition.cpp
   Parallelization.cpp
