--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 # Sources
 set(Srcs 
-  LoopSummary.cpp
-  LoopsSummary.cpp
   EnvBuilder.cpp
   LoopEnvironment.cpp
   AccumulatorOpInfo.cpp
@@ -30,7 +28,16 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../architecture/include ../../alloc_aa/include ../../pdg/include ../../hotprofiler/include ../include ../../../external/svf/include)
+include_directories(${LLVM_INCLUDE_DIRS} 
+  ../../../external/svf/include
+  ../../basic_utilities/include 
+  ../../architecture/include 
+  ../../alloc_aa/include 
+  ../../pdg/include 
+  ../../hotprofiler/include 
+  ../../loops/include 
+  ../include 
+  )
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
