--- a/src/dgsimplify/src/CMakeLists.txt
+++ b/src/dgsimplify/src/CMakeLists.txt
@@ -21,7 +21,15 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../alloc_aa/include ../../pdg/include ../../parallelization_utilities/include ../include ../../../external/svf/include)
+include_directories(${LLVM_INCLUDE_DIRS} 
+  ../../../external/svf/include
+  ../../basic_utilities/include 
+  ../../alloc_aa/include 
+  ../../pdg/include 
+  ../../loops/include
+  ../../parallelization_utilities/include 
+  ../include 
+  )
 
 
 # Declare the LLVM pass to compile
