--- a/src/heuristics/src/CMakeLists.txt
+++ b/src/heuristics/src/CMakeLists.txt
@@ -26,7 +26,15 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../alloc_aa/include ../../pdg/include ../../threadpool/include ../../parallelization_utilities/include ../../../external/svf/include)
+include_directories(${LLVM_INCLUDE_DIRS} 
+  ../../../external/svf/include
+  ../../basic_utilities/include 
+  ../../alloc_aa/include 
+  ../../pdg/include 
+  ../../threadpool/include 
+  ../../loops/include
+  ../../parallelization_utilities/include 
+  )
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
