--- a/src/loop_distribution/src/CMakeLists.txt
+++ b/src/loop_distribution/src/CMakeLists.txt
@@ -22,7 +22,17 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../alloc_aa/include ../../pdg/include ../../parallelization_utilities/include ../../hotprofiler/include ../include/ ./ ../../../external/svf/include)
+include_directories(${LLVM_INCLUDE_DIRS} 
+  ../../../external/svf/include
+  ../../basic_utilities/include 
+  ../../alloc_aa/include 
+  ../../pdg/include 
+  ../../loops/include
+  ../../parallelization_utilities/include 
+  ../../hotprofiler/include 
+  ../include/ 
+  ./ 
+  )
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
