Moved loop-related code to loops

--- a/src/loops/CMakeLists.txt
+++ b/src/loops/CMakeLists.txt
@@ -33,4 +33,5 @@ install(PROGRAMS
   include/LoopSummary.hpp 
   include/LoopsSummary.hpp 
   include/LoopEnvironment.hpp
+  include/EnvBuilder.hpp
   DESTINATION include)
