Ported the changes of CMake files from the talkdown branch

--- a/src/talkdown/src/CMakeLists.txt
+++ b/src/talkdown/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set(Srcs
 )
 
 # Compilation flags
-set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
+set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++17 -fPIC")
 
 # Name of the LLVM pass
 set(PassName "TalkDown")
@@ -21,7 +21,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../../parallelization_utilities/include ../include)
+include_directories(${LLVM_INCLUDE_DIRS} ../../basic_utilities/include ../include)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
