--- a/tests/unit/empty_template/src/CMakeLists.txt
+++ b/tests/unit/empty_template/src/CMakeLists.txt
@@ -7,7 +7,7 @@ set(Srcs
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "UnitTester")
+set(PassName "TemplateTester")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
