SVF: build svf through cloning a forked repository

--- a/external/Makefile
+++ b/external/Makefile
@@ -6,7 +6,7 @@ compile: svf patch.tar
 	cd svf ; ./build.sh ;
 
 svf:
-	git clone https://github.com/SVF-tools/SVF.git svf
+	git clone https://github.com/FrancisYL/SVF.git svf
 
 patch.tar: patch svf
 	cd $< ; tar cf $@ * ; mv $@ ../ ;
