--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(Srcs
   AccumulatorOpInfo.cpp
   SCCAttrs.cpp
   SCCDAGAttrs.cpp
+  DominatorSummary.cpp
   LoopDependenceInfo.cpp
   SCCDAGPartition.cpp
   Parallelization.cpp
