--- a/tests/unit/dependence_graphs/src/CMakeLists.txt
+++ b/tests/unit/dependence_graphs/src/CMakeLists.txt
@@ -26,7 +26,7 @@ set(PassesPath ${RootPath}/src)
 set(UtilDep ${PassesPath}/basic_utilities/include)
 set(DGDep ${PassesPath}/alloc_aa/include ${PassesPath}/pdg/include ${PassesPath}/talkdown/include)
 set(SVFDep ${RootPath}/external/svf/include)
-include_directories(${LLVM_INCLUDE_DIRS} ${UtilDep} ${DGDep} ${SVFDep} ../../helpers/include ../include)
+include_directories(${LLVM_INCLUDE_DIRS} ${UtilDep} ${DGDep} ${SVFDep} ../../helpers/include ../include ./)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${PassName} MODULE ${Srcs})
