SCCDAGNormalizer: merge data inter iteration dependencies between SCCs

--- a/src/parallelization_utilities/src/CMakeLists.txt
+++ b/src/parallelization_utilities/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(Srcs
   AccumulatorOpInfo.cpp
   SCCAttrs.cpp
   SCCDAGAttrs.cpp
+  SCCDAGNormalizer.cpp
   DominatorSummary.cpp
   LoopDependenceInfo.cpp
   SCCDAGPartition.cpp
