--- a/src/parallelization_utilities/CMakeLists.txt
+++ b/src/parallelization_utilities/CMakeLists.txt
@@ -34,6 +34,7 @@ install(PROGRAMS include/Techniques.hpp
     include/LoopDependenceInfo.hpp
     include/Parallelization.hpp
     include/SCCDAGAttrs.hpp
+    include/SCCDAGNormalizer.hpp
     include/SCCDAGPartition.hpp
     include/Queue.hpp
     include/SCCAttrs.hpp
